yaml/trd-backend-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trd-backend
  labels:
    name: trd-backend
