yaml/trd-frontend-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trd-frontend
  labels:
    name: trd-frontend
