yaml/trd-tomcat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trd-prd-tomindex
  namespace: trd-backend
  labels:
    app: index-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: index-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: index-app
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - index-app
            topologyKey: "kubernetes.io/hostname"
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: "kubernetes.io/hostname"
        whenUnsatisfiable: "ScheduleAnyway"
        labelSelector:
          matchLabels:
            app: index-app
      containers:
      - image: 412381775968.dkr.ecr.ap-northeast-2.amazonaws.com/trd-dockerhub:trdservicev4.0
        name: trd-tomindex
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: 256Mi
            cpu: 200m
          limits:
            memory: 256Mi
            cpu: 200m
        livenessProbe:
          httpGet:
            path: /index.jsp 
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10 
        readinessProbe:
          httpGet:
            path: /index.jsp
            port: 8080
          initialDelaySeconds: 60 
          periodSeconds: 10 
          successThreshold: 1 
          failureThreshold: 5 
        volumeMounts:
        - name: pv-trdindex
          mountPath: /data/index
      volumes:
      - name: pv-trdindex
        persistentVolumeClaim:
          claimName: pvc-trdindex

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: trd-prd-tomsign
  namespace: trd-backend
  labels:
    app: sign-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sign-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: sign-app
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - sign-app
            topologyKey: "kubernetes.io/hostname"
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: "kubernetes.io/hostname"
        whenUnsatisfiable: "DoNotSchedule"
        labelSelector:
          matchLabels:
            app: sign-app
      containers:
      - image: 412381775968.dkr.ecr.ap-northeast-2.amazonaws.com/trd-dockerhub:trdservicev4.0
        name: trd-tomindex
        name: trd-tomsign
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: 256Mi
            cpu: 200m
          limits:
            memory: 256Mi
            cpu: 200m
        livenessProbe:
          httpGet:
            path: /signup.jsp 
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10 
        readinessProbe:
          httpGet:
            path: /signup.jsp
            port: 8080
          initialDelaySeconds: 60 
          periodSeconds: 10 
          successThreshold: 1 
          failureThreshold: 5 
        volumeMounts:
        - name: pv-trdsign
          mountPath: /data/sign
      volumes:
      - name: pv-trdsign
        persistentVolumeClaim:
          claimName: pvc-trdsign

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: trd-prd-tomlogin
  namespace: trd-backend
  labels:
    app: login-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: login-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: login-app
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - login-app
            topologyKey: "kubernetes.io/hostname"
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: "kubernetes.io/hostname"
        whenUnsatisfiable: "DoNotSchedule"
        labelSelector:
          matchLabels:
            app: login-app
      containers:
      - image: 412381775968.dkr.ecr.ap-northeast-2.amazonaws.com/trd-dockerhub:trdservicev4.0
        name: trd-tomindex
        name: trd-tomlogin
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: 256Mi
            cpu: 200m
          limits:
            memory: 256Mi
            cpu: 200m
        livenessProbe:
          httpGet:
            path: /login.jsp 
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10 
        readinessProbe:
          httpGet:
            path: /login.jsp
            port: 8080
          initialDelaySeconds: 60 
          periodSeconds: 10 
          successThreshold: 1 
          failureThreshold: 5 
        volumeMounts:
        - name: pv-trdlogin
          mountPath: /data/login
      volumes:
      - name: pv-trdlogin
        persistentVolumeClaim:
          claimName: pvc-trdlogin

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: trd-prd-tombook
  namespace: trd-backend
  labels:
    app: book-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: book-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: book-app
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - book-app
            topologyKey: "kubernetes.io/hostname"
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: "kubernetes.io/hostname"
        whenUnsatisfiable: "ScheduleAnyway"
        labelSelector:
          matchLabels:
            app: book-app
      containers:
      - image: 412381775968.dkr.ecr.ap-northeast-2.amazonaws.com/trd-dockerhub:trdservicev4.0
        name: trd-tomindex
        name: trd-tombook
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: 256Mi
            cpu: 200m
          limits:
            memory: 256Mi
            cpu: 200m
        livenessProbe:
          httpGet:
            path: /product-search.jsp 
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10 
        readinessProbe:
          httpGet:
            path: /product-search.jsp
            port: 8080
          initialDelaySeconds: 60 
          periodSeconds: 10 
          successThreshold: 1 
          failureThreshold: 5 
        volumeMounts:
        - name: pv-trdbook
          mountPath: /data/book
      volumes:
      - name: pv-trdbook
        persistentVolumeClaim:
          claimName: pvc-trdbook
