yaml/trd-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trd-index-svc
  namespace: trd-frontend
spec:
  selector:
    app: index-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  clusterIP: 172.20.10.10
---
apiVersion: v1
kind: Service
metadata:
  name: trd-sign-svc
  namespace: trd-frontend
spec:
  selector:
    app: sign-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  clusterIP: 172.20.10.30
---
apiVersion: v1
kind: Service
metadata:
  name: trd-login-svc
  namespace: trd-frontend
spec:
  selector:
    app: login-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  clusterIP: 172.20.10.50
---
apiVersion: v1
kind: Service
metadata:
  name: trd-book-svc
  namespace: trd-frontend
spec:
  selector:
    app: book-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  clusterIP: 172.20.10.70
