yaml/trd-prd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trd-ingress-rule
  namespace: trd-frontend
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:412381775968:certificate/3dd042d0-84e9-464e-b828-d18b464cfbe3
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
  - host: www.gitchang.store
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: trd-index-svc
              port:
                number: 80
        - path: /signup.jsp
          pathType: Prefix
          backend:
            service:
              name: trd-sign-svc
              port:
                number: 80
        - path: /login.jsp
          pathType: Prefix
          backend:
            service:
              name: trd-login-svc
              port:
                number: 80
        - path: /product-search.jsp
          pathType: Prefix
          backend:
            service:
              name: trd-book-svc
              port:
                number: 80
